--- a/index.html
+++ b/index.html
@@ -139,6 +139,25 @@
         margin-bottom: 1rem;
       }
     }
+    
+    .footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #f8fafc;
+      border-top: 1px solid #e2e8f0;
+      font-size: 0.725rem;
+      color: #64748b;
+      margin-top: 2rem;
+    }
+
+    .footer a {
+      color: #3b82f6;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -157,9 +176,12 @@
     <div class="table-container">
       <div id="results"></div>
     </div>
-    
-    <p class="no-results">Design and Developed By Anand Jha, for any feedback or suggession mail on skill.jha@gmail.com</p>
+
   </div>
+      <footer class="footer">
+      <p>Designed and Developed by Anand Jha</p>
+      <p>For feedback and suggestions, contact: <a href="mailto:skill.jha@gmail.com">skill.jha@gmail.com</a></p>
+    </footer>
 
   <script>
     let apiData;
