--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       padding: 0.75rem 1rem;
       text-align: left;
       border-bottom: 1px solid #e2e8f0;
-      white-space: nowrap;
+      white-space: normal;
     }
 
     .result-table th {
